# inference_results_v2.1

./: README.MD
.github/: CODEOWNERS  pull_request_template.md
closed/ASUSTeK/: Makefile  results_metadata.json
closed/ASUSTeK/results/: submission_checker_log.txt
closed/ASUSTeK/scripts/: print_harness_result.py  update_results.py
closed/ASUSTeK/systems/: A100-PCIe-80GBx8_TRT.json  ESC4000_A2x8_TRT.json
closed/Alibaba/: Makefile  README.md  README_Triton_CPU.md  calibration.md  results_metadata.json
closed/Alibaba/code/: __init__.py
closed/Alibaba/docker/: Dockerfile.build  Dockerfile.x86_64  requirements.x86_64.1.txt
closed/Alibaba/documentation/: submission_guide.md
closed/Alibaba/results/: submission_checker_log.txt
closed/Alibaba/scripts/: generate_system_descriptions.py  launch_heterogeneous_mig.py
closed/Alibaba/systems/: A100-SXM-80GBx1_TRT.json  A10x1_TRT.json  system_descriptions.tsv
closed/Azure/: Makefile  results_metadata.json
closed/Azure/power/: set_nvlink.sh
closed/Azure/results/: submission_checker_log.txt
closed/Azure/scripts/: mig_get_uuid.sh  utils.py
closed/Azure/systems/: NC96ads_A100_v4_TRT.json  NC96ads_A100_v4_TRT_Triton.json  ND96amsr_A100_v4_TRT.json  ND96amsr_A100_v4_TRT_Triton.json  NV72ads_A10_v5_TRT.json  system_descriptions.tsv
closed/Biren/: Makefile  README.md  bert_99.9.sh  bert_99.9_compliance.sh  compliance_check.sh  rn50.sh  rn50_compliance.sh
closed/Biren/code/harness/: CMakeLists.txt
closed/Biren/code/harness/br_perf_server/: CMakeLists.txt
closed/Biren/code/harness/br_perf_server/include/: samples_loader.hpp  timer.h
closed/Biren/code/harness/br_perf_server/src/: br_perf_server.cpp  timer.cpp
closed/Biren/code/harness/common/: harness_flags.hpp  utils.hpp
closed/Biren/code/harness/harness_bert/: main_bert.cpp
closed/Biren/code/harness/harness_default/: main_default.cpp
closed/Biren/code/resnet50/dataProcess/: CMakeLists.txt
closed/Biren/code/resnet50/dataProcess/include/: utils.h
closed/Biren/code/resnet50/dataProcess/scripts/: verify_supa_kernel_convert.py
closed/Biren/code/resnet50/dataProcess/src/: suinfer_preprocess.cpp
closed/Biren/docker/: Dockerfile.test.x86_64  Dockerfile.x86_64  requirements.txt
closed/Biren/documentation/: calibration.md
closed/Biren/systems/: BR104-300W-PCIex8.json
closed/Dell/: Makefile  README.md  calibration_nvidia.md  calibration_qualcomm.md
closed/Dell/docker/: Dockerfile.x86_64  requirements.x86_64.1.txt
closed/Dell/power/: README.md  analyzer-table_XE8545-A100-SXM-40GBx4.md  analyzer-table_r7515_q4_pro-qaic-v1.7.1.12-aic100.md  analyzer-table_r7515_q4_std-qaic-v1.7.1.12-aic100.md  power-settings_XE8545-A100-SXM-40GBx4.md  power-settings_XR12-A2x1.md  power-settings_r7515_q4_std-qaic-v1.7.1.12-aic100.md  server-XE8545-A100-SXM-40GBx4.cfg  server-XR12-A2x1.cfg
closed/Dell/results/: submission_checker_log.txt  submission_checker_log_qualcomm.txt
closed/Dell/scripts/: get_system_id.py
closed/Dell/systems/: R750xa_A100_PCIE_80GBx4_TRT.json  R750xa_CPU_2S_6338.json  XE8545_A100_SXM_80GBx4_TRT.json  XE8545_A100_SXM_80GBx4_TRT_MaxQ.json  XR12_A2x1_TRT_MaxQ.json  r7515_q4_pro-qaic-v1.7.1.12-aic100.json  r7515_q4_std-qaic-v1.7.1.12-aic100.json
closed/Fujitsu/: Makefile  README.md
closed/Fujitsu/documentation/: calibration.md
closed/Fujitsu/scripts/: launch_heterogeneous_mig.py  split_datacenter_edge.py
closed/Fujitsu/systems/: GX2570M6_A100-SXM-80GBx8_TRT.json  GX2570M6_A100-SXM-80GBx8_TRT_MaxQ.json  RX2540M6_A30x1_TRT.json
closed/GIGABYTE/: Makefile  README.md  README_Triton_CPU.md  calibration.md  results_metadata.json
closed/GIGABYTE/results/: submission_checker_log.txt
closed/GIGABYTE/systems/: G492-ID0_A100-SXM-80GBx8_TRT.json
closed/H3C/: Makefile  results_metadata.json
closed/H3C/code/: __init__.py
closed/H3C/docker/: Dockerfile.x86_64  requirements.x86_64.2.txt
closed/H3C/documentation/: calibration.md  submission_guide.md
closed/H3C/power/: bios_setting.sh  server-h3c.cfg  server-h3cserver.cfg  set_fan_speed.sh
closed/H3C/results/: submission_checker_log.txt
closed/H3C/scripts/: generate_system_descriptions.py
closed/H3C/systems/: A100-PCIe-80GBx3_R4900G5_TRT.json  A100-PCIe-80GBx3_R4900G5_TRT_Triton.json  A100_PCIe_80GBX20_TRT.json  A100_PCIe_80GBx1_TRT.json  A100_PCIe_80GBx1_TRT_Triton.json  A2x1_R4900G5_TRT.json  A2x1_R4900G5_TRT_Triton.json  A2x2_TRT.json  A2x2_TRT_Triton.json  A2x5_R4900G5_TRT.json  A2x6_R4950G5_TRT.json  A2x6_R4950G5_TRT_Triton.json  A30x1_R4950G5_TRT.json  A30x1_R4950G5_TRT_MaxQ.json  A30x1_R4950G5_TRT_Triton.json  A30x1_R4950G5_TRT_Triton_MaxQ.json  A30x2_R4950G5_TRT.json  A30x2_R4950G5_TRT_Triton.json  A30x3_R4900G5_TRT.json  A30x3_R4900G5_TRT_MaxQ.json  A30x3_R4900G5_TRT_Triton.json  R5300G5_A100_PCIE_80GBX4_TRT.json  R5300G5_A100_PCIE_80GBX4_TRT_Triton.json  R5300G5_A100_SXM_80GBx4_TRT.json  R5300G5_A30x8_TRT_Triton.json  (+6 more)
closed/HPE/: Makefile  README.md  README_Triton_AWS_Inferentia.md  calibration.md  rsync.dataset.on.daos.sh  rsync.dataset.on.pfss.sh
closed/HPE/code/: main.py
closed/Inspur/: Makefile  README_Jetson.md
closed/Krai/: calibration.md
closed/Lenovo/: calibration.md
closed/NVIDIA/: Makefile  README.md  README_Jetson.md  results_metadata.json
closed/Nettrix/: Makefile
closed/Qualcomm/: calibration.md
closed/SAPEON/: README.md  calibration.md  run_docker.sh
closed/SAPEON/code/resnet50/: CMakeLists.txt  preprocess_data.sh  preprocess_input.py  run.sh  run_complete.sh  run_compliance.sh  run_inferencer.sh  run_system.sh  summary.csv
closed/SAPEON/code/resnet50/include/: argparse.hpp  client_hapi.hpp  mlperf_inferencer_e1.hpp  mlperf_inferencer_x220.hpp  tensor.hpp  test_client_util.hpp  trace.hpp
closed/SAPEON/code/resnet50/src/: main.cpp  mlperf_inferencer_e1.cpp  mlperf_inferencer_x220.cpp
network/Alibaba/: Makefile  README.md  build_image.sh  servers.cfg
open/Alibaba/: README.md  submission_checker_results.csv
open/Dell/: README.md
open/Moffett/: README.md  calibration.md
open/NeuralMagic/: README.md  prune-ofa_large.md  submission.sh
(+27835 files in other folders)
